color off margin fixed to padding

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav {
 
 /* start of section two */
 .sectionTwo {
-    margin-top: 3rem;
+    padding-top: 3rem;
     background-color:#fbfbfd
 }
 
