--- a/style.css
+++ b/style.css
@@ -71,6 +71,36 @@ nav {
 
 /* end of section two */
 
+/* start of section three */
+.sectionThree {
+    padding-top: 3rem;
+    background-color: #000000;
+    background-image: url("images/mainImage3.jpg");
+    background-position: center;
+    background-size: 70vw;
+    background-repeat: no-repeat;
+    height: 31rem;
+}
+
+.sectionThreeText {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+.sectionThreeImage {
+    width: 60rem;
+}
+
+.sectionThreeImageSection {
+    display: flex;
+    justify-content: center;
+}
+
+/* end of section three */
+
 button {
     background-color: transparent;
     border: none;
